--- a/src/PriorityQueue/PriorityQueue.vcxproj
+++ b/src/PriorityQueue/PriorityQueue.vcxproj
@@ -128,7 +128,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ICommand.cpp" />
     <ClCompile Include="PriorityQueue.cpp" />
+    <ClCompile Include="UnitTest.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ICommand.h" />
+    <ClInclude Include="PriorityQueue.h" />
+    <ClInclude Include="UnitTest.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
