Add some project files for file IO, preprocessor directives and functions

--- a/src/Basic Concepts/File IO/File IO.vcxproj
+++ b/src/Basic Concepts/File IO/File IO.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e1f74dcb-2712-4b1d-8633-f92659507140}</ProjectGuid>
-    <RootNamespace>Statistics</RootNamespace>
+    <ProjectGuid>{b83ad97f-8d1b-43c6-a3e0-e51cc1c53233}</ProjectGuid>
+    <RootNamespace>FileIO</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Functions.cpp" />
-    <ClCompile Include="Statistics.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Functions.h" />
+    <ClCompile Include="File IO.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
