Update after Siemens lecture

--- a/src/Concepts/Concepts.vcxproj.filters
+++ b/src/Concepts/Concepts.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Concepts.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Examples.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
