--- a/src/SizeOfString/SizeOfString.vcxproj
+++ b/src/SizeOfString/SizeOfString.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
+    <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{18b07d25-b1af-42e0-ab5f-54f8060c4921}</ProjectGuid>
-    <RootNamespace>Inheritance</RootNamespace>
+    <ProjectGuid>{8f953c3c-d7d4-4b8b-a959-71a0636dd376}</ProjectGuid>
+    <RootNamespace>SizeOfString</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,9 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DoorStateMachine.cpp" />
-    <ClCompile Include="DoorStateMachine.ixx" />
-    <ClCompile Include="Inheritance.cpp" />
+    <ClCompile Include="SizeOfString.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
